--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ heroku==0.1.4
 idna==2.10
 psycopg2==2.8.6
 python-dateutil==1.5
+python-dotenv==0.15.0
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
